<resources>
    <string name="app_name">Beta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="courses">Courses</string>
    <string name="map">Map</string>
    <string name="ranking">Ranking</string>
    <string name="title_activity_main_app">MainAppActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="search">Search</string>
    <string name="profiles">Profiles</string>
    <string name="suggestion">Suggestion</string>
    <string name="settings">Settings</string>
    <string name="map_is_unavailable">Map is unavailable</string>
    <string name="todo">TODO</string>
    <string name="sintra_course">Sintra Course</string>
    <string name="percurso">percurso</string>
    <string name="iniciar">Iniciar</string>
    <string name="rating_3_0">Rating : 3.0</string>
    <string name="distance_5_7km">Distance : 5.7km</string>
    <string name="difficulty">Difficulty</string>
    <string name="time">Time</string>
    <string name="people">People</string>
    <string name="category">Category</string>
    <string name="google_maps_api_key">AIzaSyDP8If83dHOhKmr_26o7ZLMeMx289NxNaE</string>
</resources>
